--- a/ssh.config
+++ b/ssh.config
@@ -1,6 +1,6 @@
 Host *
   StrictHostKeyChecking no
   ControlMaster auto
-  ControlPath cm_socket/%r@%h:%p
+  ControlPath ~/.ssh/cm_socket/%r@%h:%p
   ControlPersist 10h
   ForwardAgent yes
