--- a/inventory/group_vars/puppet.yml
+++ b/inventory/group_vars/puppet.yml
@@ -1,3 +1,3 @@
 ---
-puppetmaster: "{{hostvars['puppet-node']['inventory_hostname']}}"
-puppetmaster_fqdn: "{{hostvars['puppet-node']['inventory_hostname']}}.openstacklocal"
+#puppetmaster: "{{hostvars['puppet-node']['inventory_hostname']}}"
+#puppetmaster_fqdn: "{{hostvars['puppet-node']['inventory_hostname']}}.openstacklocal"
