Jenkinsfile with end-to-end build (#2)
Populate Jenkinsfile with scripts to run per each build step. Add an additional parallel stage for faster execution.

Add playbook optimizations for the same.

Move group_vars and host_vars into inventory context. Remove unused variables and variables which should be given dynamically as extra vars.

--- a/inventory/group_vars/all.yml
+++ b/inventory/group_vars/all.yml
@@ -1,4 +1,7 @@
 ---
+vm_user_account: "cloud-user"
+heat_environment_file: "../files/heat-params.yml"
+
 puppetmaster: "{{hostvars['puppet-node']['inventory_hostname']}}"
 puppetmaster_fqdn: "{{hostvars['puppet-node']['inventory_hostname']}}.openstacklocal"
-puppet_environment: newton
+
