--- a/ansible.cfg
+++ b/ansible.cfg
@@ -6,3 +6,4 @@ roles_path = roles/
 localhost ansible_python_interpreter="/usr/bin/env python"
 retries = 6
 timeout = 60
+retry_files_enabled = False
