--- a/playbooks/puppetize_apis_loop.yml
+++ b/playbooks/puppetize_apis_loop.yml
@@ -20,5 +20,4 @@
 # TODO: AND through api group rather than individual nodes
 # TODO: see if role could be swapped to be played last and thus failing could be done by vanilla ansible-role-puppetize/master
     - fail:
-      when: hostvars['api-node0'].puppetize_result.rc != 2 and hostvars['api-node1'].puppetize_result.rc != 2
-
+      when: loopfail and hostvars['api-node0'].puppetize_result.rc != 2 and hostvars['api-node1'].puppetize_result.rc != 2
