--- a/playbooks/puppetize_apis_loop.yml
+++ b/playbooks/puppetize_apis_loop.yml
@@ -16,3 +16,8 @@
         insertafter: import\ sys
         line: "sys.argv.append('--insecure')"
       ignore_errors: true
+# Rationale: If either puppetize completes, convergence has occurred and the other failure is probably puppetmaster acting up.
+# TODO: AND through api group rather than individual nodes
+# TODO: see if role could be swapped to be played last and thus failing could be done by vanilla ansible-role-puppetize/master
+    - fail:
+      when: loopfail and hostvars['api-node0'].puppetize_result.rc != 2 and hostvars['api-node1'].puppetize_result.rc != 2
