--- a/playbooks/generate_hostsfile.yml
+++ b/playbooks/generate_hostsfile.yml
@@ -1,5 +1,5 @@
 ---
-- hosts: all
+- hosts: all:!puppet
   become: yes
   become_user: root
   gather_facts: yes
@@ -18,13 +18,6 @@
       notify:
         - Reboot
     - meta: flush_handlers
-    - meta: clear_host_errors
-# workaround: Populate hosts file
-    - name: Generate /etc/hosts file
-      template:
-        src: templates/hosts.j2
-        dest: /etc/hosts
-
   handlers:
     - name: Sleep and reboot
       shell: sleep 5 && shutdown -r now
@@ -36,3 +29,46 @@
       pause:
         seconds: 30
       listen: Reboot
+
+- hosts: puppet
+  become: yes
+  become_user: root
+  gather_facts: yes
+  tasks:
+    - meta: clear_host_errors
+# workaround: Prevent dhcp on eth[012] touching DNS
+    - name: Modify interface network-scripts
+      copy:
+        content: |
+          DEVICE="{{ item }}"
+          BOOTPROTO="dhcp"
+          ONBOOT="yes"
+          PEERDNS="no"
+        dest: /etc/sysconfig/network-scripts/ifcfg-{{ item }}
+      with_items: "{{ ansible_interfaces | difference('lo') }}"
+      notify:
+        - Reboot
+    - meta: flush_handlers
+  handlers:
+    - name: Sleep and reboot
+      shell: sleep 5 && shutdown -r now
+      async: 1
+      poll: 0
+      ignore_errors: true
+      listen: Reboot
+    - name: Pause while waiting rebooted hosts
+      pause:
+        seconds: 30
+      listen: Reboot
+
+# workaround: Populate hosts file
+- hosts: all
+  become: yes
+  become_user: root
+  gather_facts: yes
+  tasks:
+    - meta: clear_host_errors
+    - name: Generate /etc/hosts file
+      template:
+        src: templates/hosts.j2
+        dest: /etc/hosts
