--- a/inventory/group_vars/ldap.yml
+++ b/inventory/group_vars/ldap.yml
@@ -1,2 +1,2 @@
 ---
-ansible_ssh_common_args: "-o ProxyCommand='ssh -W %h:%p -q {{ vm_user_account }}@{{ hostvars['puppet-node']['ansible_ssh_host'] }}'"
+ansible_ssh_common_args: "-o ProxyCommand='ssh -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null -W %h:%p -q {{ vm_user_account }}@{{ hostvars['puppet-node']['ansible_ssh_host'] }}'"
