No agent forwarding in puppetmaster
Use a feature branch of the puppetmaster ansible role where agent
is not forwarded.

--- a/requirements.yml
+++ b/requirements.yml
@@ -1,7 +1,7 @@
 - src: git@github.com:CSCfi/ansible-role-puppetmaster.git
   scm: git
   path: roles
-  version: cloud-OoO-workarounds
+  version: noagentforwarding
 
 - src: git@github.com:CSCfi/ansible-role-puppetize.git
   scm: git
