--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,5 +1,5 @@
 [ssh_connection]
-ssh_args = -o "ForwardAgent yes" -o "StrictHostKeyChecking no" -o "ControlMaster auto" -o "ControlPersist 10h"
+ssh_args = -o "StrictHostKeyChecking no" -o "ControlMaster auto" -o "ControlPersist 10h"
 
 [defaults]
 roles_path = roles/
