--- a/requirements.yml
+++ b/requirements.yml
@@ -1,7 +1,7 @@
 - src: git@github.com:CSCfi/ansible-role-puppetmaster.git
   scm: git
   path: roles
-  version: noagentforwarding
+  version: cloud-OoO-workarounds
 
 - src: git@github.com:CSCfi/ansible-role-puppetize.git
   scm: git
