--- a/files/example-heat-params.yml
+++ b/files/example-heat-params.yml
@@ -11,8 +11,8 @@ parameter_defaults:
   puppet_node_image:  CentOS-7
   ldap_node_flavor:   io.70GB
   ldap_node_image:    CentOS-7
-  net_node_flavor:    io.70GB
-  net_node_image:     CentOS-7
+  obj_node_flavor:    io.70GB
+  obj_node_image:     CentOS-7
 
   jumphost_allow_ssh_cidr: X.Y.Z.V/32
   mgmt_subnet_cidr:        S.P.Q.R/24
