--- a/files/ooo-heat-stack.yml
+++ b/files/ooo-heat-stack.yml
@@ -14,13 +14,13 @@ parameters:
     description: List of api node hostnames
     type: comma_delimited_list
     default: ["api-node0", "api-node1"]
-  net_server_count:
+  obj_server_count:
     type: number
     default: 2
-  net_node_names:
-    description: List of net node hostnames
+  obj_node_names:
+    description: List of obj node hostnames
     type: comma_delimited_list
-    default: ["net-node0", "net-node1"]
+    default: ["obj-node0", "obj-node1"]
   jumphost_allow_ssh_cidr:
     description: The CIDR where SSH is allowed to the jumphost from.
     type: string
@@ -147,7 +147,7 @@ resources:
           port_range_min: 636
           port_range_max: 636
 
-  network_secgroup:
+  object_secgroup:
     type: OS::Neutron::SecurityGroup
     properties:
       rules:
@@ -219,19 +219,18 @@ resources:
           ext_network_name: { get_resource: ext_network }
           ooo_frontend_secgroup: { get_resource: frontend_secgroup }
 
-  net_nodes:
+  obj_nodes:
     type: OS::Heat::ResourceGroup
     properties:
-      count: {get_param: net_server_count}
+      count: {get_param: obj_server_count}
       resource_def:
-        type: net-node.yaml
+        type: obj-node.yaml
         properties:
           index: "%index%"
-          net_node_names: { get_param: net_node_names }
+          obj_node_names: { get_param: obj_node_names }
           mgmt_network_name: { get_resource: mgmt_network }
           ext_network_name: { get_resource: ext_network }
-          proj_network_name: { get_resource: proj_network }
-          ooo_network_secgroup: { get_resource: network_secgroup }
+          ooo_object_secgroup: { get_resource: object_secgroup }
 
   galera_nodes:
     type: OS::Heat::ResourceGroup
@@ -315,9 +314,9 @@ outputs:
   api_nodes_group:
     description: The group of API nodes
     value: { get_attr: [api_nodes, show] }
-  net_nodes_group:
-    description: The group of network nodes
-    value: { get_attr: [net_nodes, show] }
+  obj_nodes_group:
+    description: The group of object storage nodes
+    value: { get_attr: [obj_nodes, show] }
   puppet_node:
     description: The puppet node
     value: { get_attr: [puppet_node, show] }
