Fix template and index
Fix inventory template, pick mgmt network from another (hardcoded)
index location.

--- a/playbooks/build-heat-stack.yml
+++ b/playbooks/build-heat-stack.yml
@@ -19,18 +19,14 @@
         environment:
           - "{{ heat_environment_file }}"
 
-    # In the next task, addresses[0] or addresses.0 did not
-    # work for some reason.
-    #
-    # shifted for network node testing
-    - debug: msg="{{ heat_stack.stack.outputs[1].output_value[0].addresses.keys()[0] }}"
-      register: second_found_network
+    - debug: msg="{{ heat_stack.stack.outputs[0].output_value[0].addresses.keys()[1] }}"
+      register: magic_index_network
 
     - name: Add Galera nodes to inventory
       add_host:
         name: "{{ item.name }}"
         groups: "{{ item.metadata.ansible_group }}"
-        ansible_ssh_host: "{{ item.addresses[second_found_network.msg][0].addr }}"
+        ansible_ssh_host: "{{ item.addresses[magic_index_network.msg][0].addr }}"
         ansible_ssh_user: "{{ vm_user_account }}"
       no_log: yes
       with_items:
@@ -45,7 +41,7 @@
       add_host:
         name: "{{ item.name }}"
         groups: "{{ item.metadata.ansible_group }}"
-        ansible_ssh_host: "{{ item.addresses[second_found_network.msg][0].addr }}"
+        ansible_ssh_host: "{{ item.addresses[magic_index_network.msg][0].addr }}"
         ansible_ssh_user: "{{ vm_user_account }}"
       no_log: yes
       with_items:
@@ -60,7 +56,7 @@
       add_host:
         name: "{{ item.name }}"
         groups: "{{ item.metadata.ansible_group }}"
-        ansible_ssh_host: "{{ item.addresses[second_found_network.msg][0].addr }}"
+        ansible_ssh_host: "{{ item.addresses[magic_index_network.msg][0].addr }}"
         ansible_ssh_user: "{{ vm_user_account }}"
       no_log: yes
       with_items:
@@ -75,7 +71,7 @@
       add_host:
         name: "{{ item.name }}"
         groups: "{{ item.metadata.ansible_group }}"
-        ansible_ssh_host: "{{ item.addresses[second_found_network.msg][1].addr }}"
+        ansible_ssh_host: "{{ item.addresses[magic_index_network.msg][1].addr }}"
         ansible_ssh_user: "{{ vm_user_account }}"
       no_log: yes
       with_items:
@@ -90,7 +86,7 @@
       add_host:
         name: "{{ item.name }}"
         groups: "{{ item.metadata.ansible_group }}"
-        ansible_ssh_host: "{{ item.addresses[second_found_network.msg][0].addr }}"
+        ansible_ssh_host: "{{ item.addresses[magic_index_network.msg][0].addr }}"
         ansible_ssh_user: "{{ vm_user_account }}"
       no_log: yes
       with_items:
