--- a/files/ooo-heat-stack.yml
+++ b/files/ooo-heat-stack.yml
@@ -14,6 +14,20 @@ parameters:
     description: List of api node hostnames
     type: comma_delimited_list
     default: ["api-node0", "api-node1"]
+  ceph_mon_server_count:
+    type: number
+    default: 3
+  ceph_mon_node_names:
+    description: List of api node hostnames
+    type: comma_delimited_list
+    default: ["mon-node0", "mon-node1", "mon-node2"]
+  ceph_osd_server_count:
+    type: number
+    default: 3
+  ceph_osd_node_names:
+    description: List of api node hostnames
+    type: comma_delimited_list
+    default: ["osd-node0", "osd-node1", "osd-node2"]
   obj_server_count:
     type: number
     default: 2
@@ -41,6 +55,18 @@ parameters:
     type: string
   puppet_node_image:
     description: The image to use for Puppet nodes.
+    type: string
+  ceph_mon_node_flavor:
+    description: The flavor to use for Ceph monitor nodes.
+    type: string
+  ceph_mon_node_image:
+    description: The image to use for Ceph monitor nodes.
+    type: string
+  ceph_osd_node_flavor:
+    description: The flavor to use for Ceph monitor nodes.
+    type: string
+  ceph_osd_node_image:
+    description: The image to use for Ceph monitor nodes.
     type: string
   floating_ip_pool:
     type: string
@@ -156,6 +182,24 @@ resources:
           port_range_min: 22
           port_range_max: 22
 
+  ceph_mon_secgroup:
+    type: OS::Neutron::SecurityGroup
+    properties:
+      rules:
+        - protocol: tcp
+          remote_ip_prefix: { get_param: mgmt_subnet_cidr }
+          port_range_min: 22
+          port_range_max: 22
+
+  ceph_osd_secgroup:
+    type: OS::Neutron::SecurityGroup
+    properties:
+      rules:
+        - protocol: tcp
+          remote_ip_prefix: { get_param: mgmt_subnet_cidr }
+          port_range_min: 22
+          port_range_max: 22
+
   proj_network:
     type: OS::Neutron::Net
 
@@ -219,19 +263,29 @@ resources:
           ext_network_name: { get_resource: ext_network }
           ooo_frontend_secgroup: { get_resource: frontend_secgroup }
 
-  obj_nodes:
+  ceph_mon_nodes:
     type: OS::Heat::ResourceGroup
     properties:
-      count: {get_param: obj_server_count}
+      count: {get_param: ceph_mon_server_count}
       resource_def:
-        type: obj-node.yaml
+        type: mon-node.yaml
         properties:
           index: "%index%"
-          obj_node_names: { get_param: obj_node_names }
+          ceph_mon_node_names: { get_param: ceph_mon_node_names }
           mgmt_network_name: { get_resource: mgmt_network }
-          ext_network_name: { get_resource: ext_network }
-          proj_network_name: { get_resource: proj_network }
-          ooo_object_secgroup: { get_resource: object_secgroup }
+          ooo_mon_secgroup: { get_resource: ceph_mon_secgroup }
+
+  ceph_osd_nodes:
+    type: OS::Heat::ResourceGroup
+    properties:
+      count: {get_param: ceph_osd_server_count}
+      resource_def:
+        type: osd-node.yaml
+        properties:
+          index: "%index%"
+          ceph_mon_node_names: { get_param: ceph_osd_node_names }
+          mgmt_network_name: { get_resource: mgmt_network }
+          ooo_osd_secgroup: { get_resource: ceph_osd_secgroup }
 
   galera_nodes:
     type: OS::Heat::ResourceGroup
