Test ansible-ceph parameters

--- a/inventory/group_vars/mons.yml
+++ b/inventory/group_vars/mons.yml
@@ -1,2 +1,9 @@
 ---
 ansible_ssh_common_args: "-o ProxyCommand='ssh -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null -W %h:%p -q {{ vm_user_account }}@{{ hostvars['puppet-node']['ansible_ssh_host'] }}'"
+ceph_origin: distro
+ceph_stable_release: jewel
+monitor_interface: eth0
+public_network: "10.99.99.0/24"
+osd_scenario: collocated
+radosgw_interface: eth0
+
