--- a/files/ooo-heat-stack.yml
+++ b/files/ooo-heat-stack.yml
@@ -187,6 +187,7 @@ resources:
     properties:
       rules:
         - protocol: tcp
+        - protocol: tcp
           remote_ip_prefix: { get_param: mgmt_subnet_cidr }
           port_range_min: 22
           port_range_max: 22
