--- a/inventory/group_vars/osds.yml
+++ b/inventory/group_vars/osds.yml
@@ -6,6 +6,7 @@ monitor_interface: eth0
 public_network: "10.99.99.0/24"
 osd_scenario: collocated
 radosgw_interface: eth0
+ceph_fsid: "12345678-90ab-cdef-1234-567890abcdef"
 devices:
   - /dev/vdb
 
