Adjust ssh configs

--- a/ssh.config
+++ b/ssh.config
@@ -1,5 +1,6 @@
 Host *
   StrictHostKeyChecking no
+  UserKnownHostsFile /dev/null
   ControlMaster auto
   ControlPath ~/.ssh/cm_socket/%r@%h:%p
   ControlPersist 10h
