--- a/inventory/group_vars/osds.yml
+++ b/inventory/group_vars/osds.yml
@@ -7,6 +7,7 @@ public_network: "10.99.99.0/24"
 osd_scenario: collocated
 radosgw_interface: eth0
 fsid: "12345678-90ab-cdef-1234-567890abcdef"
+generate_fsid: false
 devices:
   - /dev/vdb
 
