--- a/inventory/group_vars/mons/mons.yml
+++ b/inventory/group_vars/mons/mons.yml
@@ -83,6 +83,59 @@ openstack_radosgw_meta_pool:
   name: fi-polte-devel.rgw.meta
   pg_num: "{{ osd_pool_default_pg_num }}"
   rule_name: ""
+openstack_radosgw_control_pool_2:
+  name: fi-polte-devel2.rgw.control
+  pg_num: "{{ osd_pool_default_pg_num }}"
+  rule_name: ""
+openstack_radosgw_data_root_pool_2:
+  name: fi-polte-devel2.rgw.data.root
+  pg_num: "{{ osd_pool_default_pg_num }}"
+  rule_name: ""
+openstack_radosgw_gc_pool_2:
+  name: fi-polte-devel2.rgw.gc
+  pg_num: "{{ osd_pool_default_pg_num }}"
+  rule_name: ""
+openstack_radosgw_log_pool_2:
+  name: fi-polte-devel2.rgw.log
+  pg_num: "{{ osd_pool_default_pg_num }}"
+  rule_name: ""
+openstack_radosgw_intent_log_pool_2:
+  name: fi-polte-devel2.rgw.intent-log
+  pg_num: "{{ osd_pool_default_pg_num }}"
+  rule_name: ""
+openstack_radosgw_usage_pool_2:
+  name: fi-polte-devel2.rgw.usage
+  pg_num: "{{ osd_pool_default_pg_num }}"
+  rule_name: ""
+openstack_radosgw_users_keys_pool_2:
+  name: fi-polte-devel2.rgw.users.keys
+  pg_num: "{{ osd_pool_default_pg_num }}"
+  rule_name: ""
+openstack_radosgw_users_email_pool_2:
+  name: fi-polte-devel2.rgw.users.email
+  pg_num: "{{ osd_pool_default_pg_num }}"
+  rule_name: ""
+openstack_radosgw_users_swift_pool_2:
+  name: fi-polte-devel2.rgw.users.swift
+  pg_num: "{{ osd_pool_default_pg_num }}"
+  rule_name: ""
+openstack_radosgw_users_uid_pool_2:
+  name: fi-polte-devel2.rgw.users.uid
+  pg_num: "{{ osd_pool_default_pg_num }}"
+  rule_name: ""
+openstack_radosgw_buckets_index_pool_2:
+  name: fi-polte-devel2.rgw.buckets.index
+  pg_num: "{{ osd_pool_default_pg_num }}"
+  rule_name: ""
+openstack_radosgw_buckets_data_pool_2:
+  name: fi-polte-devel2.rgw.buckets.data
+  pg_num: "{{ osd_pool_default_pg_num }}"
+  rule_name: ""
+openstack_radosgw_meta_pool_2:
+  name: fi-polte-devel2.rgw.meta
+  pg_num: "{{ osd_pool_default_pg_num }}"
+  rule_name: ""
+
 
 openstack_pools:
   - "{{ openstack_glance_pool }}"
@@ -103,9 +156,23 @@ openstack_pools:
   - "{{ openstack_radosgw_buckets_index_pool }}"
   - "{{ openstack_radosgw_buckets_data_pool }}"
   - "{{ openstack_radosgw_meta_pool }}"
+  - "{{ openstack_radosgw_control_pool_2 }}"
+  - "{{ openstack_radosgw_data_root_pool_2 }}"
+  - "{{ openstack_radosgw_gc_pool_2 }}"
+  - "{{ openstack_radosgw_log_pool_2 }}"
+  - "{{ openstack_radosgw_intent_log_pool_2 }}"
+  - "{{ openstack_radosgw_usage_pool_2 }}"
+  - "{{ openstack_radosgw_users_keys_pool_2 }}"
+  - "{{ openstack_radosgw_users_email_pool_2 }}"
+  - "{{ openstack_radosgw_users_swift_pool_2 }}"
+  - "{{ openstack_radosgw_users_uid_pool_2 }}"
+  - "{{ openstack_radosgw_buckets_index_pool_2 }}"
+  - "{{ openstack_radosgw_buckets_data_pool_2 }}"
+  - "{{ openstack_radosgw_meta_pool_2 }}"
 
 openstack_keys:
   - { name: client.glance-devel, key: "{{ vault_glance_devel_key }}", mon_cap: "allow r", osd_cap: "allow class-read object_prefix rbd_children, allow rwx pool={{ openstack_glance_pool.name }}", mode: "0600", acls: [] }
   - { name: client.cinder-devel, key: "{{ vault_cinder_devel_key }}", mon_cap: "allow r", osd_cap: "allow class-read object_prefix rbd_children, allow rwx pool={{ openstack_cinder_pool.name }}, allow rwx pool={{ openstack_nova_pool.name }}, allow rx pool={{ openstack_glance_pool.name }}", mode: "0600", acls: []  }
   - { name: client.nova-devel, key: "{{ vault_nova_devel_key }}", mon_cap: "allow r", osd_cap: "allow class-read object_prefix rbd_children, allow rwx pool={{ openstack_glance_pool.name }}, allow rwx pool={{ openstack_nova_pool.name }}, allow rwx pool={{ openstack_cinder_pool.name }}", mode: "0600", acls: [] }
   - { name: client.radosgw.fi-polte-devel, key: "{{ vault_radosgw_devel_key }}", mon_cap: "allow r", osd_cap: "allow class-read object_prefix rbd_children, allow rwx pool={{ openstack_radosgw_pool.name }}, allow rwx pool={{ openstack_radosgw_root_pool.name }}, allow rwx pool={{ openstack_radosgw_control_pool.name }}, allow rwx pool={{ openstack_radosgw_data_root_pool.name }}, allow rwx pool={{ openstack_radosgw_gc_pool.name }}, allow rwx pool={{ openstack_radosgw_log_pool.name }}, allow rwx pool={{ openstack_radosgw_intent_log_pool.name }}, allow rwx pool={{ openstack_radosgw_usage_pool.name }}, allow rwx pool={{ openstack_radosgw_users_keys_pool.name }}, allow rwx pool={{ openstack_radosgw_users_email_pool.name }}, allow rwx pool={{ openstack_radosgw_users_swift_pool.name }}, allow rwx pool={{ openstack_radosgw_users_uid_pool.name }}, allow rwx pool={{ openstack_radosgw_buckets_index_pool.name }}, allow rwx pool={{ openstack_radosgw_buckets_data_pool.name }}, allow rwx pool={{ openstack_radosgw_meta_pool.name }}", mode: "0600", acls: [] }
+  - { name: client.radosgw.fi-polte-devel2, key: "{{ vault_radosgw_devel_key_2 }}", mon_cap: "allow r", osd_cap: "allow class-read object_prefix rbd_children, allow rwx pool={{ openstack_radosgw_pool_2.name }}, allow rwx pool={{ openstack_radosgw_root_pool_2.name }}, allow rwx pool={{ openstack_radosgw_control_pool_2.name }}, allow rwx pool={{ openstack_radosgw_data_root_pool_2.name }}, allow rwx pool={{ openstack_radosgw_gc_pool_2.name }}, allow rwx pool={{ openstack_radosgw_log_pool_2.name }}, allow rwx pool={{ openstack_radosgw_intent_log_pool_2.name }}, allow rwx pool={{ openstack_radosgw_usage_pool_2.name }}, allow rwx pool={{ openstack_radosgw_users_keys_pool_2.name }}, allow rwx pool={{ openstack_radosgw_users_email_pool_2.name }}, allow rwx pool={{ openstack_radosgw_users_swift_pool_2.name }}, allow rwx pool={{ openstack_radosgw_users_uid_pool_2.name }}, allow rwx pool={{ openstack_radosgw_buckets_index_pool_2.name }}, allow rwx pool={{ openstack_radosgw_buckets_data_pool_2.name }}, allow rwx pool={{ openstack_radosgw_meta_pool_2.name }}", mode: "0600", acls: [] }
