Add pip provider workaround for objs

--- a/playbooks/puppetize_objs.yml
+++ b/playbooks/puppetize_objs.yml
@@ -2,5 +2,10 @@
 - hosts: obj
   become: true
   become_user: root
+  pre_tasks:
+# workaround: pip provider fails
+    - shell: ln -s /usr/bin/pip /usr/bin/pip-python
+      args:
+        creates: /usr/bin/pip-python
   roles:
     - { role: ansible-role-puppetize, ansible_fqdn: "{{inventory_hostname_short}}.openstacklocal" }
