--- a/inventory/group_vars/mons/mons.yml
+++ b/inventory/group_vars/mons/mons.yml
@@ -23,141 +23,156 @@ openstack_nova_pool:
   name: vms-devel
   pg_num: "{{ osd_pool_default_pg_num }}"
   rule_name: ""
-openstack_radosgw_pool:
-  name: radosgw-devel
-  pg_num: "{{ osd_pool_default_pg_num }}"
-  rule_name: ""
+
 openstack_radosgw_root_pool:
   name: .rgw.root
   pg_num: "{{ osd_pool_default_pg_num }}"
   rule_name: ""
-openstack_radosgw_control_pool:
-  name: fi-polte-devel.rgw.control
-  pg_num: "{{ osd_pool_default_pg_num }}"
-  rule_name: ""
-openstack_radosgw_data_root_pool:
-  name: fi-polte-devel.rgw.data.root
-  pg_num: "{{ osd_pool_default_pg_num }}"
-  rule_name: ""
-openstack_radosgw_gc_pool:
-  name: fi-polte-devel.rgw.gc
-  pg_num: "{{ osd_pool_default_pg_num }}"
-  rule_name: ""
-openstack_radosgw_log_pool:
-  name: fi-polte-devel.rgw.log
-  pg_num: "{{ osd_pool_default_pg_num }}"
-  rule_name: ""
-openstack_radosgw_intent_log_pool:
-  name: fi-polte-devel.rgw.intent-log
-  pg_num: "{{ osd_pool_default_pg_num }}"
-  rule_name: ""
-openstack_radosgw_usage_pool:
-  name: fi-polte-devel.rgw.usage
-  pg_num: "{{ osd_pool_default_pg_num }}"
-  rule_name: ""
-openstack_radosgw_users_keys_pool:
-  name: fi-polte-devel.rgw.users.keys
-  pg_num: "{{ osd_pool_default_pg_num }}"
-  rule_name: ""
-openstack_radosgw_users_email_pool:
-  name: fi-polte-devel.rgw.users.email
-  pg_num: "{{ osd_pool_default_pg_num }}"
-  rule_name: ""
-openstack_radosgw_users_swift_pool:
-  name: fi-polte-devel.rgw.users.swift
-  pg_num: "{{ osd_pool_default_pg_num }}"
-  rule_name: ""
-openstack_radosgw_users_uid_pool:
-  name: fi-polte-devel.rgw.users.uid
-  pg_num: "{{ osd_pool_default_pg_num }}"
-  rule_name: ""
-openstack_radosgw_buckets_index_pool:
-  name: fi-polte-devel.rgw.buckets.index
-  pg_num: "{{ osd_pool_default_pg_num }}"
-  rule_name: ""
-openstack_radosgw_buckets_data_pool:
-  name: fi-polte-devel.rgw.buckets.data
-  pg_num: "{{ osd_pool_default_pg_num }}"
-  rule_name: ""
-openstack_radosgw_meta_pool:
-  name: fi-polte-devel.rgw.meta
-  pg_num: "{{ osd_pool_default_pg_num }}"
-  rule_name: ""
-openstack_radosgw_control_pool_2:
-  name: fi-polte-devel2.rgw.control
-  pg_num: "{{ osd_pool_default_pg_num }}"
-  rule_name: ""
-openstack_radosgw_data_root_pool_2:
-  name: fi-polte-devel2.rgw.data.root
-  pg_num: "{{ osd_pool_default_pg_num }}"
-  rule_name: ""
-openstack_radosgw_gc_pool_2:
-  name: fi-polte-devel2.rgw.gc
-  pg_num: "{{ osd_pool_default_pg_num }}"
-  rule_name: ""
-openstack_radosgw_log_pool_2:
-  name: fi-polte-devel2.rgw.log
-  pg_num: "{{ osd_pool_default_pg_num }}"
-  rule_name: ""
-openstack_radosgw_intent_log_pool_2:
-  name: fi-polte-devel2.rgw.intent-log
-  pg_num: "{{ osd_pool_default_pg_num }}"
-  rule_name: ""
-openstack_radosgw_usage_pool_2:
-  name: fi-polte-devel2.rgw.usage
-  pg_num: "{{ osd_pool_default_pg_num }}"
-  rule_name: ""
-openstack_radosgw_users_keys_pool_2:
-  name: fi-polte-devel2.rgw.users.keys
-  pg_num: "{{ osd_pool_default_pg_num }}"
-  rule_name: ""
-openstack_radosgw_users_email_pool_2:
-  name: fi-polte-devel2.rgw.users.email
-  pg_num: "{{ osd_pool_default_pg_num }}"
-  rule_name: ""
-openstack_radosgw_users_swift_pool_2:
-  name: fi-polte-devel2.rgw.users.swift
-  pg_num: "{{ osd_pool_default_pg_num }}"
-  rule_name: ""
-openstack_radosgw_users_uid_pool_2:
-  name: fi-polte-devel2.rgw.users.uid
-  pg_num: "{{ osd_pool_default_pg_num }}"
-  rule_name: ""
-openstack_radosgw_buckets_index_pool_2:
-  name: fi-polte-devel2.rgw.buckets.index
-  pg_num: "{{ osd_pool_default_pg_num }}"
-  rule_name: ""
-openstack_radosgw_buckets_data_pool_2:
-  name: fi-polte-devel2.rgw.buckets.data
-  pg_num: "{{ osd_pool_default_pg_num }}"
-  rule_name: ""
-openstack_radosgw_meta_pool_2:
-  name: fi-polte-devel2.rgw.meta
+
+openstack_radosgw_zonegroup_root_pool:
+  name: fi.root
   pg_num: "{{ osd_pool_default_pg_num }}"
   rule_name: ""
 
+openstack_radosgw_data_root_pool_1:
+  name: fi-polte-devel.rgw.data.root
+  pg_num: "{{ osd_pool_default_pg_num }}"
+  rule_name: ""
+openstack_radosgw_control_pool_1:
+  name: fi-polte-devel.rgw.control
+  pg_num: "{{ osd_pool_default_pg_num }}"
+  rule_name: ""
+openstack_radosgw_gc_pool_1:
+  name: fi-polte-devel.rgw.gc
+  pg_num: "{{ osd_pool_default_pg_num }}"
+  rule_name: ""
+openstack_radosgw_log_pool_1:
+  name: fi-polte-devel.rgw.log
+  pg_num: "{{ osd_pool_default_pg_num }}"
+  rule_name: ""
+openstack_radosgw_intent_log_pool_1:
+  name: fi-polte-devel.rgw.intent-log
+  pg_num: "{{ osd_pool_default_pg_num }}"
+  rule_name: ""
+openstack_radosgw_usage_pool_1:
+  name: fi-polte-devel.rgw.usage
+  pg_num: "{{ osd_pool_default_pg_num }}"
+  rule_name: ""
+openstack_radosgw_users_keys_pool_1:
+  name: fi-polte-devel.rgw.users.keys
+  pg_num: "{{ osd_pool_default_pg_num }}"
+  rule_name: ""
+openstack_radosgw_users_email_pool_1:
+  name: fi-polte-devel.rgw.users.email
+  pg_num: "{{ osd_pool_default_pg_num }}"
+  rule_name: ""
+openstack_radosgw_users_swift_pool_1:
+  name: fi-polte-devel.rgw.users.swift
+  pg_num: "{{ osd_pool_default_pg_num }}"
+  rule_name: ""
+openstack_radosgw_users_uid_pool_1:
+  name: fi-polte-devel.rgw.users.uid
+  pg_num: "{{ osd_pool_default_pg_num }}"
+  rule_name: ""
+openstack_radosgw_buckets_index_pool_1:
+  name: fi-polte-devel.rgw.buckets.index
+  pg_num: "{{ osd_pool_default_pg_num }}"
+  rule_name: ""
+openstack_radosgw_buckets_data_pool_1:
+  name: fi-polte-devel.rgw.buckets.data
+  pg_num: "{{ osd_pool_default_pg_num }}"
+  rule_name: ""
+openstack_radosgw_meta_pool_1:
+  name: fi-polte-devel.rgw.meta
+  pg_num: "{{ osd_pool_default_pg_num }}"
+  rule_name: ""
+openstack_radosgw_root_pool_1:
+  name: fi-polte-devel.rgw.root
+  pg_num: "{{ osd_pool_default_pg_num }}"
+  rule_name: ""
+
+openstack_radosgw_data_root_pool_2:
+  name: fi-polte-devel.rgw.data.root
+  pg_num: "{{ osd_pool_default_pg_num }}"
+  rule_name: ""
+openstack_radosgw_control_pool_2:
+  name: fi-polte-devel.rgw.control
+  pg_num: "{{ osd_pool_default_pg_num }}"
+  rule_name: ""
+openstack_radosgw_gc_pool_2:
+  name: fi-polte-devel.rgw.gc
+  pg_num: "{{ osd_pool_default_pg_num }}"
+  rule_name: ""
+openstack_radosgw_log_pool_2:
+  name: fi-polte-devel.rgw.log
+  pg_num: "{{ osd_pool_default_pg_num }}"
+  rule_name: ""
+openstack_radosgw_intent_log_pool_2:
+  name: fi-polte-devel.rgw.intent-log
+  pg_num: "{{ osd_pool_default_pg_num }}"
+  rule_name: ""
+openstack_radosgw_usage_pool_2:
+  name: fi-polte-devel.rgw.usage
+  pg_num: "{{ osd_pool_default_pg_num }}"
+  rule_name: ""
+openstack_radosgw_users_keys_pool_2:
+  name: fi-polte-devel.rgw.users.keys
+  pg_num: "{{ osd_pool_default_pg_num }}"
+  rule_name: ""
+openstack_radosgw_users_email_pool_2:
+  name: fi-polte-devel.rgw.users.email
+  pg_num: "{{ osd_pool_default_pg_num }}"
+  rule_name: ""
+openstack_radosgw_users_swift_pool_2:
+  name: fi-polte-devel.rgw.users.swift
+  pg_num: "{{ osd_pool_default_pg_num }}"
+  rule_name: ""
+openstack_radosgw_users_uid_pool_2:
+  name: fi-polte-devel.rgw.users.uid
+  pg_num: "{{ osd_pool_default_pg_num }}"
+  rule_name: ""
+openstack_radosgw_buckets_index_pool_2:
+  name: fi-polte-devel.rgw.buckets.index
+  pg_num: "{{ osd_pool_default_pg_num }}"
+  rule_name: ""
+openstack_radosgw_buckets_data_pool_2:
+  name: fi-polte-devel.rgw.buckets.data
+  pg_num: "{{ osd_pool_default_pg_num }}"
+  rule_name: ""
+openstack_radosgw_meta_pool_2:
+  name: fi-polte-devel.rgw.meta
+  pg_num: "{{ osd_pool_default_pg_num }}"
+  rule_name: ""
+openstack_radosgw_root_pool_2:
+  name: fi-polte-devel.rgw.root
+  pg_num: "{{ osd_pool_default_pg_num }}"
+  rule_name: ""
 
 openstack_pools:
   - "{{ openstack_glance_pool }}"
   - "{{ openstack_cinder_pool }}"
   - "{{ openstack_nova_pool }}"
-  - "{{ openstack_radosgw_pool }}"
+
   - "{{ openstack_radosgw_root_pool }}"
-  - "{{ openstack_radosgw_control_pool }}"
-  - "{{ openstack_radosgw_data_root_pool }}"
-  - "{{ openstack_radosgw_gc_pool }}"
-  - "{{ openstack_radosgw_log_pool }}"
-  - "{{ openstack_radosgw_intent_log_pool }}"
-  - "{{ openstack_radosgw_usage_pool }}"
-  - "{{ openstack_radosgw_users_keys_pool }}"
-  - "{{ openstack_radosgw_users_email_pool }}"
-  - "{{ openstack_radosgw_users_swift_pool }}"
-  - "{{ openstack_radosgw_users_uid_pool }}"
-  - "{{ openstack_radosgw_buckets_index_pool }}"
-  - "{{ openstack_radosgw_buckets_data_pool }}"
-  - "{{ openstack_radosgw_meta_pool }}"
-  - "{{ openstack_radosgw_control_pool_2 }}"
+  - "{{ openstack_radosgw_zonegroup_root_pool }}"
+
+  - "{{ openstack_radosgw_data_root_pool_1 }}"
+  - "{{ openstack_radosgw_control_pool_1 }}"
+  - "{{ openstack_radosgw_gc_pool_1 }}"
+  - "{{ openstack_radosgw_log_pool_1 }}"
+  - "{{ openstack_radosgw_intent_log_pool_1 }}"
+  - "{{ openstack_radosgw_usage_pool_1 }}"
+  - "{{ openstack_radosgw_users_keys_pool_1 }}"
+  - "{{ openstack_radosgw_users_email_pool_1 }}"
+  - "{{ openstack_radosgw_users_swift_pool_1 }}"
+  - "{{ openstack_radosgw_users_uid_pool_1 }}"
+  - "{{ openstack_radosgw_buckets_index_pool_1 }}"
+  - "{{ openstack_radosgw_buckets_data_pool_1 }}"
+  - "{{ openstack_radosgw_meta_pool_1 }}"
+  - "{{ openstack_radosgw_root_pool_1 }}"
+
   - "{{ openstack_radosgw_data_root_pool_2 }}"
+  - "{{ openstack_radosgw_control_pool_2 }}"
   - "{{ openstack_radosgw_gc_pool_2 }}"
   - "{{ openstack_radosgw_log_pool_2 }}"
   - "{{ openstack_radosgw_intent_log_pool_2 }}"
@@ -169,10 +184,11 @@ openstack_pools:
   - "{{ openstack_radosgw_buckets_index_pool_2 }}"
   - "{{ openstack_radosgw_buckets_data_pool_2 }}"
   - "{{ openstack_radosgw_meta_pool_2 }}"
+  - "{{ openstack_radosgw_root_pool_2 }}"
 
 openstack_keys:
   - { name: client.glance-devel, key: "{{ vault_glance_devel_key }}", mon_cap: "allow r", osd_cap: "allow class-read object_prefix rbd_children, allow rwx pool={{ openstack_glance_pool.name }}", mode: "0600", acls: [] }
   - { name: client.cinder-devel, key: "{{ vault_cinder_devel_key }}", mon_cap: "allow r", osd_cap: "allow class-read object_prefix rbd_children, allow rwx pool={{ openstack_cinder_pool.name }}, allow rwx pool={{ openstack_nova_pool.name }}, allow rx pool={{ openstack_glance_pool.name }}", mode: "0600", acls: []  }
   - { name: client.nova-devel, key: "{{ vault_nova_devel_key }}", mon_cap: "allow r", osd_cap: "allow class-read object_prefix rbd_children, allow rwx pool={{ openstack_glance_pool.name }}, allow rwx pool={{ openstack_nova_pool.name }}, allow rwx pool={{ openstack_cinder_pool.name }}", mode: "0600", acls: [] }
-  - { name: client.radosgw.fi-polte-devel, key: "{{ vault_radosgw_devel_key }}", mon_cap: "allow r", osd_cap: "allow class-read object_prefix rbd_children, allow rwx pool={{ openstack_radosgw_pool.name }}, allow rwx pool={{ openstack_radosgw_root_pool.name }}, allow rwx pool={{ openstack_radosgw_control_pool.name }}, allow rwx pool={{ openstack_radosgw_data_root_pool.name }}, allow rwx pool={{ openstack_radosgw_gc_pool.name }}, allow rwx pool={{ openstack_radosgw_log_pool.name }}, allow rwx pool={{ openstack_radosgw_intent_log_pool.name }}, allow rwx pool={{ openstack_radosgw_usage_pool.name }}, allow rwx pool={{ openstack_radosgw_users_keys_pool.name }}, allow rwx pool={{ openstack_radosgw_users_email_pool.name }}, allow rwx pool={{ openstack_radosgw_users_swift_pool.name }}, allow rwx pool={{ openstack_radosgw_users_uid_pool.name }}, allow rwx pool={{ openstack_radosgw_buckets_index_pool.name }}, allow rwx pool={{ openstack_radosgw_buckets_data_pool.name }}, allow rwx pool={{ openstack_radosgw_meta_pool.name }}", mode: "0600", acls: [] }
-  - { name: client.radosgw.fi-polte-devel2, key: "{{ vault_radosgw_devel_key_2 }}", mon_cap: "allow r", osd_cap: "allow class-read object_prefix rbd_children, allow rwx pool={{ openstack_radosgw_pool_2.name }}, allow rwx pool={{ openstack_radosgw_root_pool_2.name }}, allow rwx pool={{ openstack_radosgw_control_pool_2.name }}, allow rwx pool={{ openstack_radosgw_data_root_pool_2.name }}, allow rwx pool={{ openstack_radosgw_gc_pool_2.name }}, allow rwx pool={{ openstack_radosgw_log_pool_2.name }}, allow rwx pool={{ openstack_radosgw_intent_log_pool_2.name }}, allow rwx pool={{ openstack_radosgw_usage_pool_2.name }}, allow rwx pool={{ openstack_radosgw_users_keys_pool_2.name }}, allow rwx pool={{ openstack_radosgw_users_email_pool_2.name }}, allow rwx pool={{ openstack_radosgw_users_swift_pool_2.name }}, allow rwx pool={{ openstack_radosgw_users_uid_pool_2.name }}, allow rwx pool={{ openstack_radosgw_buckets_index_pool_2.name }}, allow rwx pool={{ openstack_radosgw_buckets_data_pool_2.name }}, allow rwx pool={{ openstack_radosgw_meta_pool_2.name }}", mode: "0600", acls: [] }
+  - { name: client.radosgw.fi-polte-devel, key: "{{ vault_radosgw_devel_key }}", mon_cap: "allow r", osd_cap: "allow class-read object_prefix rbd_children, allow rwx pool={{ openstack_radosgw_root_pool.name }}, allow rwx pool={{ openstack_radosgw_zonegroup_root_pool.name }}, allow rwx pool={{ openstack_radosgw_data_root_pool_1.name }}, allow rwx pool={{ openstack_radosgw_control_pool_1.name }}, allow rwx pool={{ openstack_radosgw_gc_pool_1.name }}, allow rwx pool={{ openstack_radosgw_log_pool_1.name }}, allow rwx pool={{ openstack_radosgw_intent_log_pool_1.name }}, allow rwx pool={{ openstack_radosgw_usage_pool_1.name }}, allow rwx pool={{ openstack_radosgw_users_keys_pool_1.name }}, allow rwx pool={{ openstack_radosgw_users_email_pool_1.name }}, allow rwx pool={{ openstack_radosgw_users_swift_pool_1.name }}, allow rwx pool={{ openstack_radosgw_users_uid_pool_1.name }}, allow rwx pool={{ openstack_radosgw_buckets_index_pool_1.name }}, allow rwx pool={{ openstack_radosgw_buckets_data_pool_1.name }}, allow rwx pool={{ openstack_radosgw_meta_pool_1.name }}, allow rwx pool={{ openstack_radosgw_root_pool_1.name }}", mode: "0600", acls: [] }
+  - { name: client.radosgw.fi-polte-devel2, key: "{{ vault_radosgw_devel_key_2 }}", mon_cap: "allow r", osd_cap: "allow class-read object_prefix rbd_children, allow rwx pool={{ openstack_radosgw_root_pool.name }}, allow rwx pool={{ openstack_radosgw_zonegroup_root_pool.name }}, allow rwx pool={{ openstack_radosgw_data_root_pool_2.name }}, allow rwx pool={{ openstack_radosgw_control_pool_2.name }}, allow rwx pool={{ openstack_radosgw_gc_pool_2.name }}, allow rwx pool={{ openstack_radosgw_log_pool_2.name }}, allow rwx pool={{ openstack_radosgw_intent_log_pool_2.name }}, allow rwx pool={{ openstack_radosgw_usage_pool_2.name }}, allow rwx pool={{ openstack_radosgw_users_keys_pool_2.name }}, allow rwx pool={{ openstack_radosgw_users_email_pool_2.name }}, allow rwx pool={{ openstack_radosgw_users_swift_pool_2.name }}, allow rwx pool={{ openstack_radosgw_users_uid_pool_2.name }}, allow rwx pool={{ openstack_radosgw_buckets_index_pool_2.name }}, allow rwx pool={{ openstack_radosgw_buckets_data_pool_2.name }}, allow rwx pool={{ openstack_radosgw_meta_pool_2.name }}, allow rwx pool={{ openstack_radosgw_root_pool_2.name }}", mode: "0600", acls: [] }
